# Behavioral-Control-Programs

./: .gitignore  CSV_Writer.py  DictToCSVWriter.py  MonkeyImagesQueue.py  MonkeyImagesRyanVersion_Pause_EarlyPullTimeOut.py  MonkeyImagesRyanVersion_STARTSTOP.py  MonkeyImagesRyanVersion_STARTSTOPEvents.py  MonkeyImagesRyanVersion_Training_w_Reset.py  MonkeyImagesRyanVersion_Training_with_DS.py  MonkeyImagesRyanVersion_Training_with_DS_GC.py  MonkeyImagesRyanVersion_Training_with_DS_GC_TESTERROR.py  MonkeyImagesRyanVersion_Training_with_DS_GC_TESTERROR_EVENTCHANGE.py  MonkeyImagesRyanVersion_Training_with_DS_w_Reset.py  MonkeyImagesTestingTkinterLoopsRyanVersion_RewardMod.py  MonkeyImages_Homezone.py  MonkeyImages_Joystick.py  MonkeyImages_Joystick_Test.py  PlexonCineplexTest_SeparateMarkerEvents.py  README.md  definitionsRyan.py  test_csv_reader.py  testwinsoundstuff.py
Primate_Joystick_Pull/: .gitignore  CSV_Writer.py  DictToCSVWriter.py  MonkeyImagesQueue.py  MonkeyImagesRyanVersion_Pause_EarlyPullTimeOut.py  MonkeyImagesRyanVersion_STARTSTOPEvents.py  MonkeyImagesRyanVersion_Training_with_DS.py  MonkeyImagesTestingTkinterLoopsRyanVersion_RewardMod.py  MonkeyImages_Homezone.py  MonkeyImages_Homezone_Test.py  MonkeyImages_Joystick.py  MonkeyImages_Joystick_Conf.py  MonkeyImages_Joystick_Test.py  Output_EXAMPLE_HomezoneExit.csv  Output_EXAMPLE_Joystick.csv  config.py  csvconfig.csv  csvconfig_20200515.csv  csvconfig_EXAMPLE_HomezoneExit.csv  csvconfig_EXAMPLE_Joystick.csv  data_bridge.py  definitionsRyan.py  game_frame.py  gen_histogram.py  gen_images.py  gen_templates.py  photodiode.py  plexon.py  pyproject.toml  readme.md  requirements.txt  requirements_histogram.txt  requirements_hw.txt  requirments.txt  test_csv_reader.py  testwinsoundstuff.py  version_log.txt
Primate_Joystick_Pull/deprecated/: MonkeyImages_HomezoneExit.py  MonkeyImages_Joystick.py
Primate_Joystick_Pull/development/: MonkeyImagesRyanVersion_Training_w_Reset.py  MonkeyImagesRyanVersion_Training_with_DS_GC_TESTERROR.py  MonkeyImagesRyanVersion_Training_with_DS_w_Reset.py  MonkeyImages_Homezone_Test.py  MonkeyImages_Joystick_Test.py  PlexonCineplexTest_SeparateMarkerEvents.py  README.md
Primate_Joystick_Pull/documentation/: Instructions to Play the Game.txt  IntervalTimingTask_DetailedDescription.docx  NHP_IntervalTimingTaskDetail.md  asked_questions.md  csvconfig_EXAMPLE_Joystick.csv  online_classification.md  readme_2.md
Primate_Joystick_Pull/joystick_pull/: MonkeyImages_Joystick_Conf.py  __main__.py  build_template.py  config.py  data_bridge.py  game_frame.py  gen_histogram.py  gen_images.py  gen_templates.py  photodiode.py  plexon.py  zone.py
Primate_Joystick_Pull/joystick_pull/plexon/: __init__.py
Primate_Joystick_Pull/joystick_pull/plexon/pyopxclient/: pyopxclientapi.py
Primate_Joystick_Pull/joystick_pull/pyplexdo/: __init__.py  pyplexdolib.py
Primate_Joystick_Pull/joystick_pull/tools/: analog_to_npy.py  display_trials.py
Primate_Joystick_Pull/joystick_pull/tools/output_gen/: __main__.py  gen_csv.py  gen_histogram.py
Primate_Joystick_Pull/joystick_pull/tools/time_sync/: get_event_times.py
Primate_Joystick_Pull/pyopxclient/: __init__.py  pyopxclientapi.py
Primate_Joystick_Pull/tools/output_gen/: __main__.py  gen_csv.py  gen_histogram.py
classifiers/: pyproject.toml
classifiers/behavioral_classifiers/: __init__.py  classifier.py  eucl_classifier.py  events_file.py  random_classifier.py
classifiers/behavioral_classifiers/helpers/: __init__.py  config.py  debug_tools.py  events_file.py
one_targ/: .gitignore  example_config.hjson  pyproject.toml  readme.md  version_log.txt
one_targ/one_targ/: __main__.py  co.kv  config.py  game_ui.py  nidaq.py  plexon.py  reward_calc.py
one_targ/one_targ/tools/: count_trials.py
tilt_hardware_control/: README.md
touchscreen_co/Touchscreen/one_targ_new/: .gitignore  co.kv  example_config.hjson  main.py  pyproject.toml  readme.md  requirements.txt
util/: .gitignore  build.py  event_source.md  pyproject.toml
util/butil/: __init__.py  debounce.py  digital_output.py  git.py  out_file.py  out_tools.py  sound.py
util/butil/bridge/: bridge_events.py  data_bridge.py  direct_bridge.py  output.py
util/butil/event_source/: __init__.py  get_event_source.py  process_source.py
util/butil/plexon/: __init__.py
util/butil/plexon/plexdo/: __init__.py
util/butil/plexon/pyopxclient/: pyopxclientapi.py  pyopxclientlib.py
(+288 files in other folders)
