[tool.poetry]
name = "joystick_pull"
version = "0.1.0"
description = ""
authors = ["Ryan <yarnnd@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
# 9.5.0 is the last Pillow version with binaries for 32-bit python
Pillow = "9.5.0"
hjson = "3.0.2"

plotnine = { version = "0.10.1", optional = true }

behavioral_classifiers = { path = "../classifiers", develop = true }
butil = { path = "../util", develop = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
hw = []
plotting = ["plotnine"]

[tool.poetry.scripts]
js-game = "joystick_pull.__main__:main"
js-gen-output = "joystick_pull.tools.output_gen.__main__:main"
js-histogram = "joystick_pull.tools.gen_histogram:main"
js-gen-template = "joystick_pull.gen_templates:gen_templates_main"
js-display-trials = "joystick_pull.tools.display_trials:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
