[tool.poetry]
name = "behavioral_classifiers"
version = "0.1.0"
description = ""
authors = ["Ryan <yarnnd@gmail.com>"]

packages = [ { include = "behavioral_classifiers" }, ]

[tool.poetry.dependencies]
python = "^3.8,^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
