[tool.poetry]
name = "one_targ"
version = "0.1.0"
description = ""
authors = ["Ryan <yarnnd@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"

"kivy" = { version = "2.2.1", extras = ["base"] }
numpy = "1.25.2"
hjson = "3.0.1"
nidaqmx = { version = "0.5.7", optional = true }

butil = { path = "../util", develop = true }

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
hw = ["nidaqmx"]

[tool.poetry.scripts]
one-targ = "one_targ.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
