[tool.poetry]
name = "one_targ_new"
version = "0.1.0"
description = ""
authors = ["Ryan <yarnnd@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"

"kivy" = { version = "2.0.0", extras = ["base"] }
numpy = "1.19.4"
hjson = "3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
